renamed addTooltips() to gridTreeTips() and added grobBrowser()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@4 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,7 +2,8 @@
 import(grid, graph, Rgraphviz, gridSVG)
 
 export(gridTree)
-export(addTooltips)
+export(gridTreeTips)
+export(grobBrowser)
 
 # 'grid' methods
 S3method("drawDetails", "edgegrob")
