moved grid.DLapply( )to grid; moved bezier to grid; split graph drawing out to gridGraphviz
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,13 +1,11 @@
 
-import(grid, graph, Rgraphviz, gridSVG)
+import(grid, gridGraphviz, gridSVG)
 
 export(gridTree)
 export(gridTreeTips)
 export(grobBrowser)
 
-# 'grid' methods
-S3method("drawDetails", "edgegrob")
-
 # 'gridSVG' methods
+S3method("primToDev", "beziergrob")
 S3method("primToDev", "edgegrob")
 
