--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package:      gridDebug
-Version:      0.3
-Depends:      grid, graph, Rgraphviz, gridSVG
+Version:      0.4-0
+Depends:      R (>= 2.15.0), grid, gridGraphviz, gridSVG
 Suggests:     lattice, ggplot2
 SystemRequirements: graphviz
 Title:        Debugging Grid Graphics
