changes that depend on R 2.16; removal of special primToDev() methods
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@12 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/branches/R2.16/pkg/DESCRIPTION
+++ b/branches/R2.16/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package:      gridDebug
-Version:      0.4-0
-Depends:      R (>= 2.15.0), grid, gridGraphviz, gridSVG
+Version:      0.5-0
+Depends:      R (>= 2.16.0), grid, gridGraphviz, gridSVG (>= 1.1)
 Suggests:     lattice, ggplot2
 SystemRequirements: graphviz
 Title:        Debugging Grid Graphics
