--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package:      gridDebug
 Version:      0.5-0
-Depends:      R (>= 3.0.0), grid, gridGraphviz, gridSVG (>= 1.1)
+Depends:      R (>= 3.0.0), grid, graph, gridGraphviz, gridSVG (>= 1.1)
 Suggests:     lattice, ggplot2
 SystemRequirements: graphviz
 Title:        Debugging Grid Graphics
