clean up for CRAN checks
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/griddebug@19 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,9 +1,10 @@
 Package:      gridDebug
 Version:      0.5-0
-Depends:      R (>= 3.0.0), grid, graph, gridGraphviz, gridSVG (>= 1.1)
+Depends:      R (>= 3.0.0)
+Imports:      methods, grid, graph, gridGraphviz, gridSVG (>= 1.1)
 Suggests:     lattice, ggplot2
 SystemRequirements: graphviz
-Title:        Debugging Grid Graphics
+Title:        Debugging 'grid' Graphics
 Author:       Paul Murrell and Velvet Ly.
 Maintainer:   Paul Murrell <p.murrell@auckland.ac.nz>
 Description:  Functions for drawing scene trees representing 
